# local-llm-manager

./: .gitignore  LICENSE  README.md  pyproject.toml
src/local_llm_manager/: __init__.py  benchmark.py  cli.py  comparison.py  database.py  datasets.py  eval_harness.py  hardware.py  ollama_client.py  quantize.py  recommendations.py  reports.py
src/local_llm_manager/data/: __init__.py  mmlu_subset.json  truthfulqa_subset.json
